<resources>
    <string name="app_name">Assemble-day</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_assemble">Assemble</string>
    <string name="calendar_day_of_the_week">월화수목금토일</string>
    <string name="calendar_day">#d</string>
    <string name="assemble_title">Assemble</string>
    <string name="issue_title">이슈</string>
    <string name="action_item_reset">초기화</string>
    <string name="action_item_detail">상세보기</string>
    <string name="action_item_save">저장</string>
    <string name="action_item_update">수정</string>
    <string name="label_creation_title">새로운 레이블</string>
    <string name="milestone_creation_title">새로운 마일스톤</string>
    <string name="milestone_date">완료일</string>
    <string name="label_title">제목</string>
    <string name="label_description">설명</string>
    <string name="label_background">배경색</string>
    <string name="label_filter_default">label</string>
    <string name="label_hint_description">선택 사항</string>
    <string name="milestone_date_hint_description">선택 사항(YYYY-MM-DD)</string>
    <string name="label_hint_title">필수 입력</string>
    <string name="label_background_color_preview">label</string>
    <string name="label_font_color">글씨색</string>
    <string name="assemble_day_title_hint">Assemble 타이틀을 입력하세요</string>
    <string name="assemble_day_period">일정</string>
    <string name="assemble_day_period_end">&#160;&#160;-&#160;&#160;%s</string>
    <string name="snack_bar_unable_select">시작일 2일 이내에는 Assemble Day 를 설정할 수 없습니다</string>
    <string name="snack_bar_unable_create_target">타겟을 생성하기 위해서는 레이블을 지정해 주시기 바랍니다</string>
    <string name="snack_bar_unable_validate_target_title">타겟 제목은 최소 1글자 이상이며 공백만 있어서는 안됩니다</string>
    <string name="assemble_day">Assemble Day</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_filter">Filter label</string>
    <string name="label_select">Select label</string>
    <string name="label_search">Search label</string>
    <string name="action_item_delete">삭제</string>
    <string name="issue_close">닫기</string>
    <string name="title_issue_edit_default">0</string>
    <string name="title_issue_search">검색</string>
    <string name="issue_search_hint">검색어를 입력하세요</string>
    <string name="milestone_title">마일스톤</string>
    <string name="milestone_progress">%d%%</string>
</resources>